--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-container container">
+      <div class="header-container">
         <nav class="header-nav">
           <a class="header-logo" href="./index.html"
             >Web<span class="header-nav-logo-span">Studio</span></a
@@ -864,7 +864,7 @@
     </footer>
 
 
-<div class="container-modal-window">
+<div class="container-modal-window is-hidden">
       <div class="modal-window">
         <button type="button" class="modal-btn">
           <svg class="icon-close" width="8" height="8">
