--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             </li>
           </ul>
         </address>
+        <!-- open -->
         <button class="mobile-menu-open" type="button" id="my-button-open">
           <svg
             class="mobile-menu-open-icon"
@@ -62,7 +63,7 @@
             <use href="./images/icons.svg#mobile-menu-open"></use>
           </svg>
         </button>
-
+<!-- closed -->
          <div class="mobile-container" id="my-modal">
           <div class="mobile-menu">
             <button class="mobile-menu-button" type="button" id="modal-button-close" >
@@ -948,7 +949,7 @@ Text input</textarea
         </form>
       </div>
     </div>
-   <script src="js/main.js"></script>
+   <script src="js/index.js"></script>
   </body>
 </html>
 
