--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
     </header> 
   </header>
      <main>
+      <!-- order btn -->
       <section class="hero hero-bg-image">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
